examples/simple/posix/UB-PTHREAD5-bad.output
Error: UB-PTHREAD5
Description: Called lock on an object that was not initialized with pthread_mutex_init.
Type: Undefined behavior.
See also: POSIX 2008 sec. pthread_mutex_lock
  at pthread_mutex_lock(UB-PTHREAD5-bad.c:15)
  at main(UB-PTHREAD5-bad.c:15)
  at <file-scope>(<unknown>)
